Set the size to 1 instead of asserting and crashing. Aaron, as this is controversial, I'll let you decide if this fix is ok. (read the bugreport to know more)

BUG: 157133

svn path=/trunk/KDE/kdebase/workspace/; revision=770406