plasma/containments/desktop/renderthread.cpp
@@ -130,8 +130,12 @@ void RenderThread::run()
         imgSize *= ratio;
         
         // if any of them is zero we may run into a div-by-zero below.
-        Q_ASSERT(imgSize.width() > 0);
-        Q_ASSERT(imgSize.height() > 0);
+        if (imgSize.width() == 0) {
+            imgSize.setWidth(1);
+        }
+        if (imgSize.height() == 0) {
+            imgSize.setHeight(1);
+        }
 
         // set render parameters according to resize mode
         switch (method)
